--- a/Podvibe admin/package.json
+++ b/Podvibe admin/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
